tool: run open rewrite recipe on jpo-ode-plugins for Spring upgrade